--- a/decidim-elections/app/views/decidim/elections/elections/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/elections/show.html.erb
@@ -90,3 +90,53 @@ edit_link(
       </ul>
   </div>
 </div>
+<!-- Election results -->
+<% if election.results_published? %>
+  <div class="row section">
+    <div class="columns large-8">
+      <h2 class="section-heading"><%= t(".results.title") %></h2>
+        <p>
+          <%= t(".results.description") %>:
+        </p>
+        <ul class="accordion js-sortable mb-m evote__preview"
+          data-accordion
+          data-multi-expand="true"
+          data-allow-all-closed="true">
+          <% election.questions.each_with_index do |question, i| %>
+            <li class="accordion-item evote__preview-question <%= " is-active" if i == 0 %>" data-accordion-item>
+              <a href="#" class="accordion-title flex--sbc"><%= translated_attribute(question.title) %></a>
+              <div class="accordion-content" data-tab-content>
+                <% question.answers.each do |answer| %>
+                  <div class="evote__preview-result">
+                    <h3 class="evote__preview-option">
+                      <%= translated_attribute(answer.title) %>
+                      <% if answer.selected? %>
+                        <span class="label label--small label--highlight">
+                          <%= t(".results.selected") %>
+                        </span>
+                      <% end %>
+                    </h3>
+
+                    <div class="progress__bar">
+                      <div class="evote__preview-bar">
+                        <div class="progress progress__bar__bar" role="progressbar" tabindex="0" aria-valuenow="<%= answer.question.votes_calucations(answer.votes) %>%" aria-valuemin="0" aria-valuetext=<%= t(".results.aria_value_text", calculated: answer.question.votes_calucations(answer.votes)) %>>
+                          <div class="progress-meter progress__bar__bar--complete" style="width: <%= answer.question.votes_calucations(answer.votes) %>%"></div>
+                          <div class="progress__bar__bar--incomplete" style="width:calc(100% - <%= answer.question.votes_calucations(answer.votes) %>%);"></div>
+                        </div>
+                        <div class="evote__preview-perc">
+                          <%= answer.question.votes_calucations(answer.votes) %>%
+                        </div>
+                        </div>
+                        <div class="evote__preview-label">
+                          <%= t(".results.votes", count: answer.votes) %>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </li>
+            <% end %>
+        </ul>
+    </div>
+  </div>
+<% end %>
