remove unnecessary class

--- a/decidim-elections/app/views/decidim/elections/elections/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/elections/show.html.erb
@@ -68,7 +68,7 @@ edit_link(
     <p>
       <%= t(".questions_preview.description") %>:
     </p>
-    <ul class="accordion js-sortable mb-m evote__preview"
+    <ul class="accordion mb-m evote__preview"
         data-accordion
         data-multi-expand="true"
         data-allow-all-closed="true">
