--- a/decidim-core/app/assets/stylesheets/decidim/modules/_collapsible-list.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_collapsible-list.scss
@@ -36,7 +36,7 @@
 
   .collapsible-list__see-more{
     display: none;
-    color: $secondary;
+    color: var(--secondary);
   }
 
   .collapsible-list__see-more:hover{
