--- a/decidim-core/app/cells/decidim/content_blocks/sub_hero/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/sub_hero/show.erb
@@ -1,7 +1,7 @@
   <section class="extended subhero home-section">
     <div class="row">
       <div class="columns small-centered large-10">
-        <h2 class="heading2">%
+        <h2 class="heading2">
           <%= decidim_sanitize translated_attribute current_organization.description %>
         </h2>
         <% unless current_user %>
