--- a/decidim-admin/app/views/decidim/admin/moderated_users/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderated_users/index.html.erb
@@ -35,17 +35,13 @@
               <% if allowed_to?(:unreport, :moderate_users) %>
                 <%= icon_link_to "action-undo",  ignore_moderated_user_path(id: moderation),  t(".actions.unreport"),  class: "action-icon--unreport",  method: :put %>
               <% end %>
-              <% if allowed_to?(:ban, :moderate_users) %>
-                <%#= icon_link_to "action-undo",  ignore_moderated_user_path(id: moderation),  t(".actions.unreport"),  class: "action-icon--unreport",  method: :put %>
-                <%= icon "ban", class: "action-icon action-icon--disabled", role: "img" %>
+              <% if allowed_to?(:suspend, :moderate_users) %>
+                <% if moderation.user.suspended? %>
+                  <%= icon_link_to "ban", user_suspend_path(user_id: moderation.user.id), t(".actions.unsuspend"), class: "action-icon action-icon--disabled", method: :delete %>
+                <% else %>
+                  <%= icon_link_to "ban", new_user_suspend_path(user_id: moderation.user.id), t(".actions.suspend"), class: "action-icon action-icon" %>
+                <% end %>
               <% end %>
-
-              <%# if !moderation.reportable.hidden? && allowed_to?(:hide, :moderation) %>
-              <%#= icon_link_to "eye", hide_moderation_path(id: moderation), t("actions.hide", scope: "decidim.reported_users"), class: "action-icon--hide", method: :put %>
-              <%# end %>
-              <%# if moderation.reportable.hidden? && allowed_to?(:unhide, :moderation) %>
-              <%#= icon_link_to "eye", unhide_moderation_path(id: moderation),t("actions.unhide", scope: "decidim.reported_users"),method: :put %>
-              <%# end %>
             </td>
           </tr>
         <% end %>
