Add margin between back link and title

--- a/decidim-elections/app/views/decidim/elections/elections/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/elections/show.html.erb
@@ -18,10 +18,12 @@ edit_link(
   <div class="columns">
 
     <% unless single? %>
-      <%= link_to :elections, class: "small hollow" do %>
-        <%= icon "caret-left", class: "icon--small" %>
-        <%= t(".back") %>
-      <% end %>
+      <div class="m-bottom">
+        <%= link_to :elections, class: "small hollow" do %>
+          <%= icon "caret-left", class: "icon--small" %>
+          <%= t(".back") %>
+        <% end %>
+      </div>
     <% end %>
 
     <h1 class="heading2">
