--- a/decidim-elections/app/views/decidim/elections/admin/setup/_form.html.erb
+++ b/decidim-elections/app/views/decidim/elections/admin/setup/_form.html.erb
@@ -14,7 +14,7 @@
       <% end %>
       <p></p>
 
-    <% if !@form.trustees.empty? %>
+    <% if @form.trustees.any? %>
       <h4>Selected trustees</h4>
       <ul class="no-bullet-indented">
         <% @form.trustees.each do |trustee| %>
