Localize a string in conference speaker

--- a/decidim-conferences/app/cells/decidim/conferences/conference_speaker/show.erb
+++ b/decidim-conferences/app/cells/decidim/conferences/conference_speaker/show.erb
@@ -70,7 +70,7 @@
       <hr class="reset mt-none mb-s">
       <div class="row">
         <div class="column medium-12">
-          <div class="bio-acts">Speaking at</div>
+          <div class="bio-acts"><%= t(".speaking_at") %></div>
 
           <ul class="list-reset">
             <% meetings.each do |meeting| %>
