--- a/decidim-debates/app/views/decidim/debates/debates/show.html.erb
+++ b/decidim-debates/app/views/decidim/debates/debates/show.html.erb
@@ -45,14 +45,19 @@ edit_link(
     <div class="card__content--multiple">
       <% if debate.start_time.present? && debate.end_time.present? %>
         <div class="extra__date">
-          <%= l debate.start_time, format: "%d" %> <span class="extra__month"><%= l debate.start_time, format: "%B" %></span>
-          <div class="extra__time text-small"> <%= l debate.start_time, format: "%H:%M" %></span></div>
-          <%= icon "arrow-thin-right text-small" %>
-        </div>
+          </br>
+          <% if debate.start_time.strftime("%d") == debate.end_time.strftime("%d") && debate.start_time.strftime("%H") != debate.end_time.strftime("%H")%>
 
+            <%= l debate.start_time, format: "%d" %> <span class="extra__month"><%= l debate.start_time, format: "%B" %></span>
+
+            <div class="extra__time text-small"> <%= l debate.start_time, format: "%H:%M" %></span></div> 
+            <%= icon "arrow-thin-right"%>
+        </div>  
+        
         <div class="extra__date">
-          <%= l debate.end_time, format: "%d" %> <span class="extra__month"> <%= l debate.end_time, format: "%B" %></span>
-          <div class="extra__time text-small"> <%= l debate.end_time, format: "%H:%M" %></span></div>
+            <%= l debate.end_time, format: "%d" %> <span class="extra__month"> <%= l debate.end_time, format: "%B" %></span>
+            <div class="extra__time text-small"> <%= l debate.end_time, format: "%H:%M" %></span></div>
+            </br>
         </div>
       <% end %>
 
@@ -151,3 +156,4 @@ edit_link(
     form: close_debate_form
   }
 %>
+<% end %>
