--- a/decidim-elections/app/views/decidim/elections/elections/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/elections/show.html.erb
@@ -68,6 +68,6 @@ edit_link(
   <%= render partial: "preview", election: election %>
 <% end %>
 <!-- Election results -->
-<% if election.bb_status == "results_published" %>
+<% if election.results_published? %>
   <%= render partial: "results", election: election %>
 <% end %>
