--- a/decidim-debates/app/views/decidim/debates/debates/show.html.erb
+++ b/decidim-debates/app/views/decidim/debates/debates/show.html.erb
@@ -51,17 +51,16 @@ edit_link(
 
             <%= l debate.start_time, format: "%d" %> <span class="extra__month"><%= l debate.start_time, format: "%B" %></span>
 
-            <div class="extra__time text-small"> <%= l debate.start_time, format: "%H:%M" %></span><p>a</p> </div>
+            <div class="extra__time text-small"> <%= l debate.start_time, format: "%H:%M" %> a <%= l debate.end_time, format: "%H:%M" %></div>
             
-            <div class="extra__time text-small"> <%= l debate.end_time, format: "%H:%M" %></span></div> 
             
-            </br>
+
           <% elsif debate.start_time.strftime("%d") != debate.end_time.strftime("%d") && debate.start_time.strftime("%H") != debate.end_time.strftime("%H")%>
 
             <%= l debate.start_time, format: "%d" %> <span class="extra__month"><%= l debate.start_time, format: "%B" %></span>
 
             <div class="extra__time text-small"> <%= l debate.start_time, format: "%H:%M" %></span></div> 
-            
+
             <%= icon "arrow-thin-right"%>
         </div>  
         
