Add a config flag to disable the registration code (#6698)
* Ref. DIFE-148
- add registration_code_enabled as an admin flag on meetings settings page
- remove registration code from email and notification
- do not display registration code on the interface after joining to a meeting

* Ref. DIFE-148
- hide "Validate registration code" from Admin - Components - Meeting section

* Ref. DIFE-148
- fix rspec error

* Ref. DIFE-148
- fix bad reference

* Ref. DIFE-148
- fix tests for join_meeting_spec.rb

* Ref. DIFE-148
- fix tests for meeting_registrations_spec.rb

* Ref. DIFE-148
- fix tests for registration_mailer_spec.rb

* Ref. DIFE-148
- fix tests for admin_manages_meetings_spec.rb

* Ref. DIFE-148
- fix tests for validate_registration_code_spec.rb

* Ref. DIFE-148
- fix linter errors

* Add functionality to enable/disable registration code.

* Add unit tests and fix the old ones.

* Add PR number to Change Log

* Updating the i18n tasks

* Fixing i18n specs

* Running linters on Changelog.md

* run linters

* Fixing Linking issues

* Remove changes done in CHANGELOG.md

* Ref. DIFE-148
- add registration_code_enabled as an admin flag on meetings settings page
- remove registration code from email and notification
- do not display registration code on the interface after joining to a meeting

* Ref. DIFE-148
- hide "Validate registration code" from Admin - Components - Meeting section

* Ref. DIFE-148
- fix bad reference

* Ref. DIFE-148
- fix tests for join_meeting_spec.rb

* Ref. DIFE-148
- fix tests for meeting_registrations_spec.rb

* Ref. DIFE-148
- fix tests for registration_mailer_spec.rb

* Ref. DIFE-148
- fix tests for admin_manages_meetings_spec.rb

* Ref. DIFE-148
- fix tests for validate_registration_code_spec.rb

* Add functionality to enable/disable registration code.

* Add PR number to Change Log

* Running linters on Changelog.md

* run linters

* Fixing Linking is

--- a/decidim-meetings/app/views/decidim/meetings/meetings/show.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/show.html.erb
@@ -79,7 +79,7 @@ edit_link(
       <% end %>
     </div>
 
-    <% if registration.present? %>
+    <% if registration.present? && registration.meeting.component.settings.registration_code_enabled %>
       <div class="card extra">
         <div class="card__content">
             <div class="registration_code">
