--- a/decidim-admin/app/views/decidim/admin/moderated_users/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderated_users/index.html.erb
@@ -3,6 +3,28 @@
     <h2 class="card-title">
       <%= t(".title") %>
     </h2>
+
+    <h2 class="card-title">
+      <div class="inline-block" style="float: right; text-align: right">
+        <table>
+          <tbody>
+          <tr>
+            <td>
+              <%= link_to moderated_users_path(blocked: false), class: "btn btn-small" do %>
+                <%= t("decidim.admin.moderated_users.tabs.unblocked") %>
+              <% end %>
+            </td>
+            <td>|</td>
+            <td>
+              <%= link_to moderated_users_path(blocked: true), class: "btn btn-small" do %>
+                <%= t("decidim.admin.moderated_users.tabs.blocked") %>
+              <% end %>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </h2>
   </div>
 
   <div class="card-section">
