DIFE-332 survey fields implementation

--- a/decidim-demographics/app/views/decidim/demographics/directory/demographics/new.html.erb
+++ b/decidim-demographics/app/views/decidim/demographics/directory/demographics/new.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="columns large-12">
     <div class="card__content">
-      <%= decidim_form_for(@form, url: demographics_engine.create_path) do |f| %>
+      <%= decidim_form_for(@form, url: demographics_engine.create_path,  method: :patch ) do |f| %>
         <%= render partial: "form", object: f %>
         <div class="actions">
           <%= f.submit t(".save"), class: "button expanded", data: { disable: true } %>
