Add spec for voting comments permissions

--- a/decidim-comments/app/cells/decidim/comments/comments/user_comments_blocked_warning.erb
+++ b/decidim-comments/app/cells/decidim/comments/comments/user_comments_blocked_warning.erb
@@ -1,4 +1,4 @@
-<% message = model.user_authorized_to_comment?(current_user) ?
+<% message = [true, nil].include?(model.try(:user_authorized_to_comment?, current_user)) ?
   "blocked_comments_for_user_warning" :
   "blocked_comments_for_unauthorized_user_warning" %>
 
