--- a/decidim-admin/app/views/decidim/admin/participatory_space_private_users/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/participatory_space_private_users/index.html.erb
@@ -15,8 +15,12 @@
         <table class="stack">
           <thead>
             <tr>
-              <th><%= t("models.assembly_user_role.fields.name", scope: "decidim.admin") %></th>
-              <th><%= t("models.assembly_user_role.fields.email", scope: "decidim.admin") %></th>
+              <th>
+               <%= sort_link(query, :name, t("models.assembly_user_role.fields.name", scope: "decidim.admin"), default_order: :desc ) %>
+              </th>
+              <th>
+                <%= sort_link(query, :email, t("models.assembly_user_role.fields.email", scope: "decidim.admin"), default_order: :desc ) %>
+              </th>
               <th><%= t("models.user.fields.invitation_sent_at", scope: "decidim.admin") %></th>
               <th><%= t("models.user.fields.invitation_accepted_at", scope: "decidim.admin") %></th>
               <th class="actions"></th>
