Change icon class when debate is closed / archived

--- a/decidim-debates/app/views/decidim/debates/admin/debates/index.html.erb
+++ b/decidim-debates/app/views/decidim/debates/admin/debates/index.html.erb
@@ -46,15 +46,15 @@
                   <% end %>
 
                   <% if allowed_to? :close, :debate, debate: debate %>
-                    <%= icon_link_to "lock-locked", edit_debate_debate_close_path(debate_id: debate.id, id: debate.id), t("actions.close", scope: "decidim.debates"), class: "action-icon--close" %>
+                    <%= icon_link_to "lock-locked", edit_debate_debate_close_path(debate_id: debate.id, id: debate.id), t("actions.close", scope: "decidim.debates"), class: "action-icon--close #{"action-icon--highlighted" if debate.closed?}" %>
                   <% else %>
                     <span class="action-space icon"></span>
                   <% end %>
 
-                  <% if debate.closed? %>
-                    <% if allowed_to? :archive, :debate, debate: debate %>
-                      <%= icon_link_to "folder", archive_debate_path(id: debate.id, archive: !debate.archived?), t("actions.#{ debate.archived? ? "unarchive" : "archive" }", scope: "decidim.debates"), class: "action-icon--archive", method: :post %>
-                    <% end %>
+                  <% if allowed_to? :archive, :debate, debate: debate %>
+                    <%= icon_link_to "folder", archive_debate_path(id: debate.id, archive: !debate.archived?), t("actions.#{ debate.archived? ? "unarchive" : "archive" }", scope: "decidim.debates"), class: "action-icon--archive #{"action-icon--highlighted" if debate.archived?}", method: :post %>
+                  <% else %>
+                    <span class="action-space icon"></span>
                   <% end %>
 
                   <% if allowed_to? :delete, :debate, debate: debate %>
