--- a/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
@@ -68,21 +68,21 @@
                                   moderation_reports_path(moderation_id: moderation),
                                   t("actions.expand", scope: "decidim.moderations"),
                                   class: "action-icon--expand" %>
-                <% if !moderation.reportable.hidden? && allowed_to?(:unreport, :moderation) %>
+                <% if !moderation.reportable.hidden? && allowed_to?(:unreport, permission_resource) %>
                   <%= icon_link_to "action-undo",
                                    unreport_moderation_path(id: moderation),
                                    t("actions.unreport", scope: "decidim.moderations"),
                                    class: "action-icon--unreport",
                                    method: :put %>
                 <% end %>
-                <% if !moderation.reportable.hidden? && allowed_to?(:hide, :moderation) %>
+                <% if !moderation.reportable.hidden? && allowed_to?(:hide, permission_resource) %>
                   <%= icon_link_to "eye",
                                    hide_moderation_path(id: moderation),
                                    t("actions.hide", scope: "decidim.moderations"),
                                    class: "action-icon--hide",
                                    method: :put %>
                 <% end %>
-                <% if moderation.reportable.hidden? && allowed_to?(:unhide, :moderation) %>
+                <% if moderation.reportable.hidden? && allowed_to?(:unhide, permission_resource) %>
                   <%= icon_link_to "eye",
                                    unhide_moderation_path(id: moderation),
                                    t("actions.unhide", scope: "decidim.moderations"),
