--- a/decidim-debates/app/views/decidim/debates/admin/debates/_form.html.erb
+++ b/decidim-debates/app/views/decidim/debates/admin/debates/_form.html.erb
@@ -22,7 +22,7 @@
 
     <div class="row column">
       <%= label_tag :debate_type, t(".debate_type") %>
-      <%= form.collection_radio_buttons(:finite, [[t(".finite"), true], [t(".permanent"), false]], :last, :first) %>
+      <%= form.collection_radio_buttons(:finite, [[t(".finite"), true], [t(".open"), false]], :last, :first) %>
     </div>
 
     <div class="row debate-fields--finite">
