Move translation for debate card

--- a/decidim-debates/app/cells/decidim/debates/debate_m/open_date.erb
+++ b/decidim-debates/app/cells/decidim/debates/debate_m/open_date.erb
@@ -1,7 +1,7 @@
 <li class="card-data__item">
   <div>
     <strong>
-      <%= t(".open") %>
+      <%= t("decidim.debates.debates.show.open") %>
     </strong>
   </div>
 </li>
