--- a/decidim-core/app/views/layouts/decidim/footer/_redesigned_main_legal.html.erb
+++ b/decidim-core/app/views/layouts/decidim/footer/_redesigned_main_legal.html.erb
@@ -1,11 +1,8 @@
 <ul class="flex flex-col md:flex-row gap-10 text-sm text-white">
   <li>
-    <%= link_to "Avís Legal" %>
+    <%= link_to t("layouts.decidim.footer.terms_and_conditions"), page_path("terms-and-conditions") %>
   </li>
   <li>
-    <%= link_to "Termes i condicions d'ús" %>
-  </li>
-  <li>
-    <%= link_to "Cookies" %>
+    <a href="#" data-open="cc-modal"><%= t("layouts.decidim.footer.cookie_settings") %></a>
   </li>
 </ul>
