--- a/decidim-core/app/views/layouts/decidim/footer/_redesigned_main_legal.html.erb
+++ b/decidim-core/app/views/layouts/decidim/footer/_redesigned_main_legal.html.erb
@@ -1,4 +1,5 @@
 <ul class="flex flex-col md:flex-row gap-10 text-sm text-white">
+  <%= cell("decidim/footer_pages", :pages) %>
   <li>
     <%= link_to t("layouts.decidim.footer.terms_and_conditions"), page_path("terms-and-conditions") %>
   </li>
