--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
@@ -16,4 +16,44 @@
   [data-dialog-closable]{
     @apply absolute top-4 right-4 text-2xl text-secondary outline-none;
   }
+
+  [data-dialog-container]{
+    @apply flex items-start gap-2 last:[&>*]:grow last:[&>*]:pr-6;
+
+    > svg{
+      @apply w-6 h-6 text-gray fill-current flex-none;
+    }
+  }
+
+  [data-dialog-title]{
+    @apply text-2xl text-black font-semibold;
+  }
+
+  [data-dialog-actions]{
+    @apply flex justify-between items-center;
+  }
+}
+
+/* specifics: upload modal */
+.upload-modal{
+  &__dropzone{
+    @apply mt-12 bg-background px-5 py-10 rounded flex items-center justify-between cursor-pointer;
+
+    &-placeholder{
+      @apply inline-flex items-center gap-4 font-semibold text-gray-2 text-md;
+    }
+
+    input[type="file"]{
+      @apply hidden;
+    }
+  }
+
+  &__text{
+    @apply text-sm text-gray-2 mt-2 mb-20 space-y-8;
+
+    ul,
+    ol{
+      @apply list-disc pl-4;
+    }
+  }
 }
