move action button to the right if it's the only child

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
@@ -30,7 +30,7 @@
   }
 
   [data-dialog-actions]{
-    @apply flex justify-between items-center;
+    @apply flex justify-between items-center only:[&>*]:ml-auto;
   }
 }
 
