--- a/decidim-admin/app/views/decidim/admin/block_user/new.html.erb
+++ b/decidim-admin/app/views/decidim/admin/block_user/new.html.erb
@@ -5,6 +5,11 @@
 <%= decidim_form_for(@form, html: { class: "form new_user_block" }, url: user_block_path(user_id: user.id), method: :post) do |f| %>
   <div class="card">
     <div class="card-section">
+
+      <% if defined?(Decidim::Templates) %>
+        <%= render "decidim/templates/admin/block_user_templates/template_chooser", form: f %>
+      <% end %>
+
       <div class="row column">
         <%= t(".description") %>
       </div>
