--- a/decidim-admin/app/views/decidim/admin/moderated_users/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderated_users/index.html.erb
@@ -1,28 +1,13 @@
 <div class="card with-overflow">
   <div class="card-divider">
     <h2 class="card-title">
-      <%= t(".title") %>
-    </h2>
 
-    <h2 class="card-title">
-      <div class="inline-block" style="float: right; text-align: right">
-        <table>
-          <tbody>
-          <tr>
-            <td>
-              <%= link_to moderated_users_path(blocked: false), class: "btn btn-small" do %>
-                <%= t("decidim.admin.moderated_users.tabs.unblocked") %>
-              <% end %>
-            </td>
-            <td>|</td>
-            <td>
-              <%= link_to moderated_users_path(blocked: true), class: "btn btn-small" do %>
-                <%= t("decidim.admin.moderated_users.tabs.blocked") %>
-              <% end %>
-            </td>
-          </tr>
-          </tbody>
-        </table>
+      <%= t(".title") %>
+
+      <div class="card__filter">
+        <%= link_to t("decidim.admin.moderated_users.tabs.unblocked"), moderated_users_path %>
+        |
+        <%= link_to  t("decidim.admin.moderated_users.tabs.blocked"), moderated_users_path(blocked: true) %>
       </div>
     </h2>
   </div>
