--- a/decidim-proposals/app/views/decidim/proposals/admin/proposals/_proposal-tr.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/admin/proposals/_proposal-tr.html.erb
@@ -7,9 +7,9 @@
   </td>
   <td>
     <% if allowed_to? :edit, :proposal, proposal: proposal %>
-      <%= link_to decidim_html_escape(present(proposal).title).html_safe, edit_proposal_path(proposal) %><br>
+      <%= link_to present(proposal).title(html_escape: true), edit_proposal_path(proposal) %><br>
     <% else %>
-      <%= decidim_html_escape(present(proposal).title).html_safe %><br>
+      <%= present(proposal).title(html_escape: true) %><br>
     <% end %>
   </td>
   <td>
